# divvy

./: .gitignore  README.md  alembic.ini  compile_translations.py  divvy  env.example  environment.yml  pyproject.toml
alembic/: README.md  env.py  script.py.mako
alembic/seeding/: __init__.py
alembic/versions/: 2025_11_21_2215-5ff9f5cde268_init.py  2025_11_23_2347-10585db74361_add_identity_provider_tables.py  2025_11_26_0002-b9c668aa5b7b_init.py  2025_11_29_1721-a79f2b07347e_init.py  2025_11_30_2046-31e7a71b93c7_init.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/dependencies/: __init__.py  auth.py  authentication.py  authorization.py  db.py  services.py
app/api/dependencies/authn/: __init__.py  token_handlers.py  user_providers.py
app/api/dependencies/authz/: __init__.py  group.py  period.py  rbac.py  transaction.py  utils.py
app/api/dependencies/policies/: group.py
app/api/dependencies/services/: __init__.py
app/api/routers/: __init__.py
app/api/routers/v1/: __init__.py  auth.py  authentication.py  categories.py  group.py  groups.py  members.py  period.py  periods.py  settlement.py  system.py  transaction.py  transactions.py  user.py
app/api/schemas/: __init__.py  auth.py  category.py  member.py  period.py  settlement.py  system.py  transaction.py  user.py
app/config/: __init__.py  app.py  auth.py  log.py
app/core/: __init__.py  config.py  datetime.py  i18n.py  security.py
app/core/identity_providers/: __init__.py  google.py  microsoft.py  protocol.py  registry.py
app/core/policies/: __init__.py  registry.py
app/core/security/: __init__.py  oauth.py  password.py  tokens.py
app/db/: __init__.py  audit.py  connection.py  models.py  session.py
app/exceptions/: __init__.py  auth.py  http.py
app/models/: __init__.py  auth.py  authorization.py  base.py  default.py  group.py  models.py  period.py  transaction.py  user.py
app/repositories/: __init__.py  account_link_request.py  authorization.py  category.py  group.py  period.py  refresh_token.py  settlement.py  transaction.py  user.py  user_identity.py
app/schemas/: __init__.py  account_link_request.py  authentication.py  group.py  period.py  transaction.py  user.py  user_identity.py
app/services/: __init__.py  account_link_request.py  auth.py  authentication.py  authorization.py  category.py  group.py  identity_provider.py  member.py  period.py  settlement.py  system.py  transaction.py  user.py  user_identity.py  utils.py
app/services/identity_providers/: __init__.py  base.py  google.py  microsoft.py  registry.py
cli/: .gitignore  CLI_DESIGN.md  MENU_DESIGN.md  README.md  __init__.py  analysis_options.yaml  main.py  pubspec.yaml  run.sh
cli/api/: openapi.json
cli/lib/src/: main.dart
cli/lib/src/api/: client.dart  divvy_client.dart  schemas.dart
cli/lib/src/auth/: auth.dart  token.dart
cli/lib/src/commands/: auth.dart  commands.dart  group.dart  menu.dart  option_parser.dart  period.dart  settlement.dart  tables.dart  transaction.dart
cli/lib/src/commands/apply/: apply.dart
cli/lib/src/commands/auth/: auth.dart  login.dart  logout.dart  register.dart  status.dart
cli/lib/src/commands/base/: command.dart  context.dart
cli/lib/src/commands/common/: back.dart  back_to_top.dart  back_to_transactions.dart  common.dart  exit.dart  more.dart  settings.dart  submenu_exit.dart
cli/lib/src/config/: config.dart  preferences.dart
cli/lib/src/menus/: group.dart  menus.dart  period.dart  transaction.dart  transaction_detail.dart  user.dart
cli/lib/src/models/: session.dart
cli/lib/src/services/: categories.dart  category.dart  group.dart  members.dart  period.dart  periods.dart  settlement.dart  transaction.dart  transactions.dart  user.dart
cli/lib/src/ui/: displays.dart  menu.dart  prompts.dart  selectors.dart  tables.dart
cli/lib/src/utils/: errors.dart  formatting.dart  i18n.dart  terminal.dart  validation.dart
cli/scripts/: generate-dart-api-client.sh
cli/test/unit/auth/: token_test.dart
cli/test/unit/config/: config_test.dart  preferences_test.dart
cli/test/unit/models/: session_test.dart
cli/test/unit/utils/: errors_test.dart  formatting_test.dart  i18n_test.dart  validation_test.dart
cli/tool/: api_generation.dart
cli_py/: __init__.py
scripts/: check-types.sh  compile_translations.py  dev.sh  generate-dart-api-client.sh  init_admin.py  migrate_sqlite_to_mysql.py  prod.sh  run.sh  seed_sample_data.py  start-api.sh  test-all.sh  test.sh
src/divvy/: cli.py  config.py  database.py  i18n.py  logic.py  schema.sql
src/divvy/database/: __init__.py  connection.py  models.py  session.py
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_logic.py
tests/api/v1/: __init__.py  test_auth.py  test_categories.py  test_groups.py  test_periods.py  test_transactions.py  test_user.py
tests/fixtures/: __init__.py  api.py  database.py  entities.py  factories.py  services.py
tests/integration/: __init__.py  test_authentication_workflow.py  test_business_rules_integration.py  test_group_period_transaction_workflow.py
tests/unit/repositories/: __init__.py  test_account_link_request_repository.py  test_authorization_repository.py  test_category_repository.py  test_group_repository.py  test_period_repository.py  test_refresh_token_repository.py  test_settlement_repository.py  test_transaction_repository.py  test_user_identity_repository.py  test_user_repository.py
tests/unit/services/: __init__.py  test_account_link_request_service.py  test_auth_service.py  test_authentication_service.py  test_authorization_service.py  test_category_service.py  test_group_service.py  test_identity_provider_service.py  test_period_service.py  test_settlement_service.py  test_transaction_service.py  test_user_identity_service.py  test_user_service.py
tests/utils/: alembic_helpers.py
ui/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/scripts/: generate-dart-api-client.sh
ui/specs/: openapi.json
ui/web/: index.html
(+48 files in other folders)
