[project]
name = "divvy"
version = "3.0.0"
description = "Expense splitting CLI with multi-database support"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
# Note: Dependencies are managed via environment.yml (conda)
# This file is used for package metadata and tool configuration only

[project.optional-dependencies]
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = [
    "pymysql>=1.0.0",
    "cryptography>=3.0.0",
]
mssql = ["pyodbc>=4.0.0"]
all-databases = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "cryptography>=3.0.0",
    "pyodbc>=4.0.0",
]

[tool.ruff]
# Line length matches common Python standards
line-length = 100

# Target Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable a comprehensive set of rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules that might be too strict for this project
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Use double quotes
known-first-party = ["divvy"]

[tool.ruff.lint.per-file-ignores]
# Allow longer lines in tests
"tests/*" = ["E501"]

[tool.black]
line-length = 100

[tool.pyright]
# Enable strict type checking mode
typeCheckingMode = "strict"
# Report missing imports as errors
reportMissingImports = "error"
# Report missing type stubs as errors
reportMissingTypeStubs = "error"
