[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divvy"
version = "3.0.0"
description = "Expense splitting CLI with multi-database support"
requires-python = ">=3.14"
readme = "README.md"
license = "Apache-2.0"
# Core runtime dependencies
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",  # Default async SQLite driver
]
# Runtime dependencies are also managed via environment.yml (conda)
# Development tool dependencies are defined in [project.optional-dependencies.dev]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.0.137",
    "black>=23.0.0",
    "pyright>=1.1.330",
    "alembic>=1.13.0",
]
# Async database drivers
postgresql = ["asyncpg>=0.29.0"]
mysql = ["aiomysql>=0.2.0"]
sqlite = ["aiosqlite>=0.19.0"]
# All async database drivers
all-databases = [
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
]

[tool.ruff]
# Line length matches common Python standards
line-length = 120

# Target Python 3.14+
target-version = "py314"

[tool.ruff.lint]
# Enable a comprehensive set of rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules that might be too strict for this project
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Use double quotes
known-first-party = ["divvy"]

[tool.ruff.lint.per-file-ignores]
# Allow longer lines in tests
"tests/*" = ["E501"]
# Allow unused import in session.py (audit module must be imported for event listeners)
"app/db/session.py" = ["F401"]

[tool.black]
line-length = 120

[tool.setuptools]
# Explicitly specify packages to include (exclude data directory)
packages = ["app", "cli"]

[tool.pyright]
# Enable strict type checking mode
typeCheckingMode = "strict"
# Report missing imports as errors
reportMissingImports = "error"
# Report missing type stubs as errors
reportMissingTypeStubs = "error"

exclude = [
    "alembic/versions/*"
]

[tool.pytest.ini_options]
# Enable pytest-asyncio auto mode to automatically detect and handle async test functions
asyncio_mode = "auto"